--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Raleway, Helvetica,Arial, sans-serif;
 }
 
 main {
@@ -14,20 +14,21 @@ main {
   margin-right: auto;
 }
 
+
 header {
   display: flex;
   position: relative;
   justify-content: center;
   align-items: center;
   width: 100vw;
-  background-color: rgb(35, 238, 120);
+  background-color: #264653;
   height: 275px;
 }
 
 header h2 {
   color: white;
-  font-size: 3em;
-  font-weight: normal;
+  font-size: 3.2em;
+  font-weight: bold ;
 }
 
 header .social-nav {
@@ -99,7 +100,7 @@ section.about p {
 .project {
   display: block;
   width: 286px;
-  background: red;
+  background:#e9c46a;
   margin-bottom: 20px;
   height: 200px;
   position: relative;
